Wed May 10 15:26:37 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Split all the generic socket stuff rom ProgClient into a
	  SocketClient base class.

Tue May  9 17:30:46 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added collapse code to MultiMatch.  Could be considerably more
	  efficient, but appears to work correctly.

Tue May  9 16:37:04 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Refactored mset merging code in MultiMatch::match() into separate
	  methods.  Now ready to add collapse code.

Tue May  9 16:16:06 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Network stuff should now time out if there is no response.

Tue May  9 14:45:44 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* OmMSetItems now have a collapse_key member, which the key used
	  for removal of duplicates is stored in.  This allows MultiMatch
	  to see these keys, and thus to remove duplicates across several
	  matchers, and also lets the user see the keys used.

Tue May  9 13:12:58 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* New exception: OmNetworkTimeoutError.

Tue May  9 12:21:35 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* MultiMatch::match() now returns all its results in its OmMSet
	  parameter, which is thus now fully set by this method.

Tue May  9 11:52:05 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* MultiMatch::match() takes an OmMSet instead of a vector<OmMSetItem>.
	  Next step is to make all the elements of the MSet get set correctly,
	  not just the items.

Mon May  8 19:42:48 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Stop MultiMatch going into a tight loop when waiting for sub
	  matchers to prepare_match() or get_mset(), by doing one pass of
	  non blocking IO, and then blocking IO for subsequent calls.

	* Refactor MultiMatch::match() into more separate methods.
