@@ -1,3 +1,7 @@
+Wed May 10 17:34:16 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
+
+	* Added (untested) TcpClient class.
+
 Wed May 10 15:26:37 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
 
 	* Split all the generic socket stuff rom ProgClient into a
